--- a/k8s-cluster-configuration/frontend-deployment.yaml
+++ b/k8s-cluster-configuration/frontend-deployment.yaml
@@ -20,3 +20,8 @@ spec:
           image: europe-central2-docker.pkg.dev/cyangate/task-repo/vuejs-frontend
           ports:
             - containerPort: 80
+      tolerations:
+        - key: "tier"
+          operator: "Equal"
+          value: "frontend"
+          effect: "NoSchedule"
